--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "animes",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,8 +11,9 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
+    "date-fns": "^4.1.0",
     "google-translate-api-x": "^10.7.2",
-    "next": "16.0.7",
+    "next": "^16.1.6",
     "react": "19.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "19.2.0",
