--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "19.2.0",
     "react-easy-crop": "^5.5.6",
+    "recharts": "^3.7.0",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
